--- a/index.css
+++ b/index.css
@@ -1,164 +1,165 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.head-container{
-    background-image: url(./pexels-photo-7063767.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.head-container {
+  background-image: url(./pexels-photo-7063767.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.header{
+.header {
   color: #e9e8e8;
-   font-weight: bold;
-   font-size: 2.8rem;
-   margin-bottom: 1.5rem;
+  font-weight: bold;
+  font-size: 2.8rem;
+  margin-bottom: 1.5rem;
 }
 
-.title-text{
-    color: #e9e8e8;
+.title-text {
+  color: #e9e8e8;
+  font-size: 1.5rem;
+}
+
+.title {
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  border: hidden;
+  border-bottom: 1px solid #000;
+  margin-bottom: 1rem;
+  width: 15rem;
+}
+
+.body {
+  width: 90vw;
+  margin-bottom: 1rem;
+  resize: none;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #000;
+  padding: 0.5rem;
+  background-color: #e9e8e8;
+}
+
+.add {
+  padding: 0.5rem 2rem;
+  font-size: 1.2rem;
+  border-radius: 0.3rem;
+  border: none;
+}
+
+.markgroup {
+  display: flex;
+  align-items: center;
+}
+
+.notes {
+  padding: 0.5rem;
+  background-color: darkgray;
+  border: 1px solid #fdfcfc;
+  border-left: none;
+  border-right: none;
+  cursor: pointer;
+}
+
+.titleFlex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.color {
+  width: 2rem;
+  height: 1.5rem;
+  background: none;
+  border: 0;
+}
+
+.note-title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  padding: 0.5rem 0.5rem;
+}
+
+.note-body {
+  display: none;
+  font-size: 1.2rem;
+  width: fit-content;
+  padding: 0.5rem;
+}
+
+.delete {
+  width: fit-content;
+  color: #fafafa;
+  font-weight: bold;
+  margin: 1rem 0 0.8rem 0;
+  margin-left: auto;
+  display: block;
+  background-color: #fc0404;
+  padding: 0.2rem;
+  border-radius: 0.2rem;
+  display: none;
+}
+
+.edit,
+.updatenote {
+  position: absolute;
+  width: fit-content;
+  color: #fafafa;
+  font-weight: bold;
+  margin: 1rem 0 0.8rem 0;
+  display: none;
+  background-color: #000000;
+  padding: 0.2rem;
+  border-radius: 0.2rem;
+}
+
+.updatenote {
+  display: block;
+}
+
+.titleEdit {
+  resize: none;
+  border: 1px solid #757575;
+  width: 90vw;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  background-color: inherit;
+}
+
+.bodyEdit {
+  resize: none;
+  border: 1px solid #757575;
+  width: 90vw;
+  padding: 1rem;
+  font-size: 1.2rem;
+  background-color: inherit;
+}
+
+.display {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    width: 20rem;
+    height: 3rem;
+  }
+  .body {
+    width: 40rem;
+    height: 10rem;
+  }
+  .add {
+    padding: 0.5rem 3rem;
     font-size: 1.5rem;
-}
-
-.title{
-    font-size: 1.2rem;
-    padding: 0.5rem;
-    border: hidden;
-    border-bottom: 1px solid #000;
-    margin-bottom: 1rem;
-    width: 15rem;
-}
-
-.body{
-    width: 90vw;
-    margin-bottom: 1rem;
-    resize: none;
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: #000;
-    padding: 0.5rem;
-    background-color: #e9e8e8;
-}
-
-.add{
-    padding: 0.5rem 2rem;
-    font-size: 1.2rem;
-    border-radius: 0.3rem;
-    border: none;
-}
-
-.markgroup{
-    display: flex;
-    align-items: center;
-}
-
-.notes{
-    padding: 0.5rem;
-    background-color: darkgray;
-    border: 1px solid #fdfcfc;
-    border-left: none;
-    border-right: none;
-    cursor: pointer;
-}
-
-.titleFlex{
-    display: flex;
-    justify-content: space-between;
-}
-
-.color{
-    width: 2rem;
-    height: 1.5rem;
-    background:none;
-    border: 0;
-}
-
-.note-title{
-    font-size: 1.5rem;
-    font-weight: 700;
-    padding: 0.5rem 0.5rem;
-}
-
-.note-body{
-    display: none;
-    font-size: 1.2rem;
-    width: fit-content;
-    padding: 0.5rem;
-}
-
-.delete{
-    width: fit-content;
-    color: #fafafa;
-    font-weight: bold;
-    margin: 1rem 0 0 0;
-    margin-left: auto;
-    display: block;
-    background-color: #fc0404;
-    padding: 0.2rem;
-    border-radius: 0.2rem;
-    display: none;
-}
-
-.edit, .updatenote{
-    position: absolute;
-    width: fit-content;
-    color: #fafafa;
-    font-weight: bold;
-    margin: 1rem 0 0 0;
-    display: none;
-    background-color: #000000;
-    padding: 0.2rem;
-    border-radius: 0.2rem;
-}
-
-.updatenote{
-    display: block;
-}
-
-.titleEdit{
-    resize: none;
-    border: 1px solid #757575;
-    width: 90vw;
-    padding: 0.5rem;
-    font-size: 1.2rem;
-    background-color: inherit;
-}
-
-.bodyEdit{
-    resize: none;
-    border: 1px solid #757575;
-    width: 90vw;
-    padding: 1rem;
-    font-size: 1.2rem;
-    background-color: inherit;
-}
-
-.display{
-    display: block; 
-}
-
-.hidden{
-    display: none;
-}
-
-@media screen and (min-width : 768px){
-    .title{
-        width: 20rem;
-        height: 3rem;
-    }
-    .body{
-        width: 40rem;
-        height: 10rem;
-    } 
-    .add{
-        padding: 0.5rem 3rem;
-        font-size: 1.5rem;
-    }
+  }
 }
