--- a/index.css
+++ b/index.css
@@ -84,6 +84,11 @@
   border: 0;
 }
 
+.title-group{
+  display: flex;
+  justify-content: space-between;
+}
+
 .note-title {
   font-size: 1.5rem;
   font-weight: 700;
