--- a/index.css
+++ b/index.css
@@ -89,20 +89,20 @@
   display: flex;
   justify-content: space-between;
   overflow-wrap: break-word;
+  width: 100%;
 }
 
 .note-title {
   font-size: 1.5rem;
   font-weight: 700;
   padding: 0.5rem;
-  width: 95vw;
+  width: 95%;
   overflow-wrap: break-word;
 }
 
 .note-body {
   display: none;
   font-size: 1.2rem;
-  width: 95vw;
   padding: 0.5rem;
   overflow-wrap: break-word;
 }
@@ -140,7 +140,7 @@
 .titleEdit, .bodyEdit {
   resize: none;
   border: 2px solid #ffffff;
-  width: 85vw;
+  width: 90vw;
   padding: 0.5rem;
   font-size: 1.2rem;
   background-color: inherit;
