--- a/index.css
+++ b/index.css
@@ -37,10 +37,6 @@
   width: 15rem;
 }
 
-.arrow {
-  width: 2rem;
-}
-
 .body {
   width: 90vw;
   margin-bottom: 1rem;
@@ -88,15 +84,20 @@
 .title-group {  
   display: flex;
   justify-content: space-between;
+  align-items: center;
   overflow-wrap: break-word;
   width: 100%;
+}
+
+
+.arrow {
+  width: 2rem;
 }
 
 .note-title {
   font-size: 1.5rem;
   font-weight: 700;
   padding: 0.5rem;
-  width: 90%;
   overflow-wrap: break-word;
 }
 
